# axum-app-template

./: .env  .gitignore  Cargo.toml
backend/: Cargo.toml
backend/migrations/: 20250303090841_create_forgot_password_transaction_table.up.sql  20250306141736_users_add_role_column.up.sql
backend/src/: main.rs
backend/src/account/: router.rs
backend/src/account/entities/: mod.rs  user.rs
backend/src/account/handlers/: auth.rs  forgot_password.rs  mod.rs  user.rs
backend/src/account/utils/: mod.rs
backend/src/core/: config.rs  constants.rs  error.rs  extractors.rs  mod.rs  state.rs  utils.rs
frontend/: Cargo.toml
frontend/src/: main.rs
migrations/: 20250227153905_create_users_table.up.sql  20250228075410_create_sessions_table.up.sql  20250303090841_create_forgot_password_transaction_table.down.sql  20250306142052_create_admin_user.down.sql  20250306142052_create_admin_user.up.sql
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/constants/: mod.rs
shared/src/traits/: mod.rs  validatable.rs
shared/src/utils/: validators.rs
src/: app.rs  constants.rs  error.rs  lib.rs  main.rs  state.rs  types.rs  utils.rs
src/account/: error.rs  mod.rs  router.rs
src/account/database/: forgot_password_repository.rs  mod.rs  session_repository.rs  user_repository.rs
src/account/entities/: forgot_password.rs  session.rs  user.rs
src/account/handlers/: auth.rs  forgot_password.rs  user.rs
src/account/utils/: extractors.rs  mod.rs
src/core/: app.rs  config.rs  constants.rs  error.rs  extractors.rs  mod.rs  models.rs  state.rs  validators.rs
(+10 files in other folders)
