[package]
name = "unnamed"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.14.1", features = ["axum", "axum-json", "swagger"] }
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros", "tracing"] }
chrono = { version = "0.4.40", features = ["serde"] }
derive-getters = "0.5.0"
dotenvy = "0.15.7"
email_address = "0.2.9"
fancy-regex = "0.14.0"
rand = "0.8.5"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_valid = "1.0.5"
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio", "sqlite"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4"] }
